5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1601_2043.log
== TEST (2019-03-27 14:09:55) 
-- CODE:
n1 = input("nota:")
n2 = input("nota:")
n3 = input("nota:")
n4 = input("nota:")

#peso das notas
x1 =input("peso:")
x2 = input("peso:")
x3 = input("peso:")
x4 = input("peso:")

#calculo da media ponderada
MP = (n1*x1 + n2*x2 + n3*x3 + n4*x4) / (x1+x2+x3+x4)
print(round(MP, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x1 =input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:12:38) 
-- CODE:
n1 = float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

#peso das notas
x1 = input("peso:")
x2 = input("peso:")
x3 = input("peso:")
x4 = input("peso:")

#calculo da media ponderada
MP = (n1*x1 + n2*x2 + n3*x3 + n4*x4)/(x1+x2+x3+x4)
print(round(MP, 2))
-- EXECUTION TIME:
0.175097
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2043/main.py", line 7, in <module>
    x1 = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:12:57) 
-- CODE:
n1 = float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

#peso das notas
x1 = input("peso:")
x2 = input("peso:")
x3 = input("peso:")
x4 = input("peso:")

#calculo da media ponderada
media = (n1*x1 + n2*x2 + n3*x3 + n4*x4)/(x1+x2+x3+x4)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x1 = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:14:49) 
-- CODE:
n1 = float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

#peso das notas
x1 = float((input("peso:"))
x2 = float(input("peso:"))
x3 = float(input("peso:"))
x4 = float(input("peso:"))

#calculo da media ponderada
media = (n1*x1 + n2*x2 + n3*x3 + n4*x4)/(x1+x2+x3+x4)
print(round(media, 2))
-- EXECUTION TIME:
0.27141
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 8
    x2 = float(input())
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:17:16) 
-- CODE:
n1 = int(input("nota:"))
n2 = int(input("nota:"))
n3 = int(input("nota:"))
n4 = int(input("nota:"))

#peso das notas
x1 = input("peso:")
x2 = input("peso:")
x3 = input("peso:")
x4 = input("peso:")

#calculo da media ponderada
media = (n1*x1 + n2*x2 + n3*x3 + n4*x4)/(x1+x2+x3+x4)
print(round(media, 2))
-- EXECUTION TIME:
0.219531
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2043/main.py", line 2, in <module>
    n2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:17:19) 
-- CODE:
n1 = int(input("nota:"))
n2 = int(input("nota:"))
n3 = int(input("nota:"))
n4 = int(input("nota:"))

#peso das notas
x1 = input("peso:")
x2 = input("peso:")
x3 = input("peso:")
x4 = input("peso:")

#calculo da media ponderada
media = (n1*x1 + n2*x2 + n3*x3 + n4*x4)/(x1+x2+x3+x4)
print(round(media, 2))
-- EXECUTION TIME:
0.183653
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2043/main.py", line 2, in <module>
    n2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:18:50) 
-- CODE:
n1 = int(input("nota:"))
n2 = int(input("nota:"))
n3 = int(input("nota:"))
n4 = int(input("nota:"))

#peso das notas
p1 = input("peso:")
p2 = input("peso:")
p3 = input("peso:")
p4 = input("peso:")

#calculo da media ponderada
media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:18:54) 
-- CODE:
n1 = int(input("nota:"))
n2 = int(input("nota:"))
n3 = int(input("nota:"))
n4 = int(input("nota:"))

#peso das notas
p1 = input("peso:")
p2 = input("peso:")
p3 = input("peso:")
p4 = input("peso:")

#calculo da media ponderada
media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 2))
-- EXECUTION TIME:
0.208498
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2043/main.py", line 2, in <module>
    n2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:19:31) 
-- CODE:
n1 = int(input("nota:"))
n2 = int(input("nota:"))
n3 = int(input("nota:"))
n4 = int(input("nota:"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:20:59) 
-- CODE:
n1 = int(input("nota:"))
n2 = int(input("nota:"))
n3 = int(input("nota:"))
n4 = int(input("nota:"))

#peso das notas
p1 = int(input("peso:"))
p2 = int(input("peso:"))
p3 = int(input("peso:"))
p4 = int(input("peso:"))

#calculo da media ponderada
media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:21:23) 
-- CODE:
n1 = int(input("nota:"))
n2 = int(input("nota:"))
n3 = int(input("nota:"))
n4 = int(input("nota:"))

#peso das notas
p1 = int(input("peso:"))
p2 = int(input("peso:"))
p3 = int(input("peso:"))
p4 = int(input("peso:"))

#calculo da media ponderada
media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:21:33) 
-- CODE:
n1 = int(input("nota:"))
n2 = int(input("nota:"))
n3 = int(input("nota:"))
n4 = int(input("nota:"))

#peso das notas
p1 = int(input("peso:"))
p2 = int(input("peso:"))
p3 = int(input("peso:"))
p4 = int(input("peso:"))

#calculo da media ponderada
media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2 = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:22:51) 
-- CODE:
n1 = float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

#peso das notas
p1 = input("peso:")
p2 = input("peso:")
p3 = input("peso:")
p4 = input("peso:")
#calculo da media ponderada
media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 2))
-- EXECUTION TIME:
0.221928
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2043/main.py", line 7, in <module>
    p1 = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:45:34) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:45:37) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 2))
-- EXECUTION TIME:
0.19151
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2043/main.py", line 6, in <module>
    media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
NameError: name 'p1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:48:26) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

p1 =int(input("peso das notas:"))
p2 = int(input("peso da notas:"))
p3 = int(input("peso das notas:"))
p4 = int(input("peso das notas:"))
media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 2))
-- EXECUTION TIME:
0.173378
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2043/main.py", line 6, in <module>
    p1 =int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:48:34) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

p1 =int(input("peso das notas:"))
p2 = int(input("peso da notas:"))
p3 = int(input("peso das notas:"))
p4 = int(input("peso das notas:"))

media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    p1 =int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:49:17) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

p1 =int(input("peso das notas:"))
p2 = int(input("peso da notas:"))
p3 = int(input("peso das notas:"))
p4 = int(input("peso das notas:"))

media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    p1 =int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:50:05) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

p1 =int(input("peso das notas:"))
p2 = int(input("peso da notas:"))
p3 = int(input("peso das notas:"))
p4 = int(input("peso das notas:"))

media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 2))
-- EXECUTION TIME:
0.150878
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2043/main.py", line 6, in <module>
    p1 =int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:50:24) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

p1 =int(input("peso das notas:"))
p2 = int(input("peso da notas:"))
p3 = int(input("peso das notas:"))
p4 = int(input("peso das notas:"))

media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    p1 =int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:50:29) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

p1 =int(input("peso das notas:"))
p2 = int(input("peso da notas:"))
p3 = int(input("peso das notas:"))
p4 = int(input("peso das notas:"))

media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 1))
-- EXECUTION TIME:
0.199059
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2043/main.py", line 6, in <module>
    p1 =int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:50:35) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

p1 =int(input("peso das notas:"))
p2 = int(input("peso da notas:"))
p3 = int(input("peso das notas:"))
p4 = int(input("peso das notas:"))

media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 1))
-- EXECUTION TIME:
0.129839
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2043/main.py", line 6, in <module>
    p1 =int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:50:39) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

p1 =int(input("peso das notas:"))
p2 = int(input("peso da notas:"))
p3 = int(input("peso das notas:"))
p4 = int(input("peso das notas:"))

media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    p1 =int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:51:02) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

p1 =int(input("peso das notas:"))
p2 = int(input("peso da notas:"))
p3 = int(input("peso das notas:"))
p4 = int(input("peso das notas:"))

media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    p1 =int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:51:06) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

p1 =int(input("peso das notas:"))
p2 = int(input("peso da notas:"))
p3 = int(input("peso das notas:"))
p4 = int(input("peso das notas:"))

media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 1))
-- EXECUTION TIME:
0.194814
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2043/main.py", line 6, in <module>
    p1 =int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:51:13) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

p1 =int(input("peso das notas:"))
p2 = int(input("peso da notas:"))
p3 = int(input("peso das notas:"))
p4 = int(input("peso das notas:"))

media = (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1+p2+p3+p4)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    p1 =int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:04:50) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

media = (n1*1 + n2*2 + n3*3 + n4*4)/(1+2+3+4)
print(media, 2)
-- OUTPUT:
8.2 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 17:05:10) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

media = (n1*1 + n2*2 + n3*3 + n4*4)/(1+2+3+4)
print(media, 2)
-- EXECUTION TIME:
0.200698
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.936000000000002 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:05:20) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

media = (n1*1 + n2*2 + n3*3 + n4*4)/(1+2+3+4)
print(media, 2)
-- OUTPUT:
8.2 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 17:24:21) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

media = (n1*1 + n2*2 + n3*3 + n4*4)/(1+2+3+4)
print(round(media, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 17:24:54) 
-- CODE:
n1 =float(input("nota:"))
n2 = float(input("nota:"))
n3 = float(input("nota:"))
n4 = float(input("nota:"))

media = (n1*1 + n2*2 + n3*3 + n4*4)/(1+2+3+4)
print(round(media, 2))
-- EXECUTION TIME:
0.193967
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
